# snark-protocol-experiment

./: .gitignore  .gitmodules  LICENSE  README.md  install_file_for_jsnark.sh  install_for_jsnark.sh  simumation_protocol_jsnark.sh
file_for_jsnark/: CMakeLists.txt  CircuitEvaluator.java  run_ppzksnark_paillier.cpp
file_for_jsnark/paillier_gadgets/: AdditionLongElementPaillier.java  HornerPolynomialEvalPaillier.java  ModPowLongElementPaillier.java  ModPowPaillier.java  MultiplicationLongElementPaillier.java  Paillier_PrivateKey.java  Paillier_PublicKey.java
file_for_jsnark/paillier_generators/: HornerPolynomialPaillierFromFileGenerator.java  HornerPolynomialPaillierGenerator.java
file_for_jsnark/paillier_tests/: test_paillier.java  test_paillier_circuit_addition.java  test_paillier_circuit_mod_pow.java  test_paillier_circuit_mod_pow_big_integer.java  test_paillier_circuit_multiplication.java  (+2 more)
jsnark/: README.md
jsnark-experiment/: README.md  launch_test_jsnark.sh
libsnark-experiment/: README.md  change_libsnark.sh  install.sh  launch_protocol_on_different_poly_degree.sh  test.sh
libsnark-experiment/src/: CMakeLists.txt  main.cpp  r1cs_evaluation.cpp  r1cs_evaluation.hpp  r1cs_from_poly_gen_function.cpp  r1cs_from_poly_gen_function.hpp  r1cs_from_poly_gen_function.tcc  r1cs_update_keys.cpp  r1cs_update_keys.hpp  r1cs_update_keys.tcc  snark_polynomial_in_clear.cpp  snark_polynomial_in_clear.hpp  snark_tests.cpp  snark_tests.hpp
report/: README.md  bibfile.bib
src/: CMakeLists.txt  main.cpp  r1cs_evaluation.cpp  r1cs_from_poly_gen_function.cpp
(+97 files in other folders)
